EKS/istio/micro-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: micro-pod-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: micro-pod
spec:
  hosts:
  - "*"
  gateways:
  - micro-pod-gateway
  http:
  - match:
    - uri:
        exact: /micro-sample
    route:
    - destination:
        host: micro-pod
        port:
          number: 80
