EKS/istio/spring-boot-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: spring-boot-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: spring-boot
spec:
  hosts:
  - "*"
  gateways:
  - spring-boot-gateway
  http:
  - match:
    - uri:
        exact: /spring-boot
    route:
    - destination:
        host: spring-boot
        port:
          number: 80
